--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
     "ethers": "^5.6.9",
+    "ipfs-http-client": "^57.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
